подключение к mongo, наполнение фейковыми данными, структура проекта, шаблоны запросов в mongodb
